--- a/agent_test.ipynb
+++ b/agent_test.ipynb
@@ -108,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mcp",
+   "display_name": "apple",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
