Feat: ppt 1차 완성 - 프로젝트 하나만 반영 가능

--- a/ppt/test_py_pptx.ipynb
+++ b/ppt/test_py_pptx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 217,
    "id": "6d22032b",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,90 @@
     "# CUR_PATH = os.path.dirname(os.path.realpath(__file__))\n",
     "\n",
     "from pptx import Presentation\n",
+    "from pptx.enum.shapes import MSO_SHAPE_TYPE\n",
+    "\n",
     "PPT_PATH = \"sample.pptx\"\n",
     "prs = Presentation(PPT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "87fd74b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def apply_replacements(shape, replace_dict, letter_spacing=200):\n",
+    "    if not shape.has_text_frame:\n",
+    "        return\n",
+    "    tf = shape.text_frame\n",
+    "    text = tf.text\n",
+    "\n",
+    "    for key, val in replace_dict.items():\n",
+    "        if not val:\n",
+    "            continue\n",
+    "        if isinstance(val, dict) and key in text:\n",
+    "            tf.clear()\n",
+    "            for domain, items in val.items():\n",
+    "                # 도메인 헤딩\n",
+    "                p_dom = tf.add_paragraph()\n",
+    "                p_dom.text = domain\n",
+    "                for run in p_dom.runs:\n",
+    "                    run.font.bold = True\n",
+    "                    run.font.spacing = letter_spacing\n",
+    "\n",
+    "                # 아이템 불릿\n",
+    "                for item in items:\n",
+    "                    p_item = tf.add_paragraph()\n",
+    "                    p_item.text = item\n",
+    "                    p_item.level = 1\n",
+    "                    p_item.bullet = True\n",
+    "                    for run in p_item.runs:\n",
+    "                        run.font.spacing = letter_spacing\n",
+    "\n",
+    "                # 빈 줄\n",
+    "                p_blank = tf.add_paragraph()\n",
+    "                p_blank.text = \" \"\n",
+    "                p_blank.level = 0\n",
+    "                p_blank.bullet = False\n",
+    "\n",
+    "            return\n",
+    "\n",
+    "    # --- 2) list 플레이스홀더 처리 ---\n",
+    "    for key, val in replace_dict.items():\n",
+    "        if not val:\n",
+    "            continue\n",
+    "        if isinstance(val, (list, tuple)) and key in text:\n",
+    "            tf.clear()\n",
+    "            # 첫 아이템\n",
+    "            p0 = tf.add_paragraph()\n",
+    "            p0.text = val[0]\n",
+    "            p0.bullet = True\n",
+    "            # 나머지\n",
+    "            for item in val[1:]:\n",
+    "                p = tf.add_paragraph()\n",
+    "                p.text = item\n",
+    "                p.level = p0.level\n",
+    "                p.bullet = True\n",
+    "            return\n",
+    "\n",
+    "    # --- 3) 나머지 문자열 플레이스홀더는 run 단위로 replace ---\n",
+    "    for paragraph in tf.paragraphs:\n",
+    "        for run in paragraph.runs:\n",
+    "            for key, val in replace_dict.items():\n",
+    "                if isinstance(val, str) and key in run.text:\n",
+    "                    run.text = run.text.replace(key, val)\n",
+    "\n",
+    "\n",
+    "def replace_in_presentation(prs, replace_dict):\n",
+    "    for slide in prs.slides:\n",
+    "        for shape in slide.shapes:\n",
+    "            if shape.shape_type == MSO_SHAPE_TYPE.GROUP:\n",
+    "                for sub in shape.shapes:\n",
+    "                    apply_replacements(sub, replace_dict)\n",
+    "            else:\n",
+    "                apply_replacements(shape, replace_dict)\n"
    ]
   },
   {
@@ -41,174 +123,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "id": "b37b3710",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# data_dict = {\n",
+    "#     \"applicant_name\":\"권기범\",\n",
+    "#     \"job\":\"AI 개발자\",\n",
+    "#     \"phone_number\":\"010-2464-5954\",\n",
+    "#     \"slogan_main\":\"AI 개발자 시켜주세요\",\n",
+    "#     \"experience_list\":[\"이거 해봄\", \"이거 해봄2\", \"이거 해봄3\"],\n",
+    "#     \"award\":[\"상 탔음\", \"상 탔음2\"],\n",
+    "#     \"vision_slogan\":\"돈 많이 벌거임\",\n",
+    "#     \"vision_description\":\"돈 많이 주세요\",\n",
+    "#     \"project_name\":\"탄소 배출량 관리 시스템\",\n",
+    "#     \"outline\":\"개요입니다.\",\n",
+    "#     \"detail_content_title\":\"구현한 내용\",\n",
+    "#     \"detail_content_list\":[\"탄소 배출량 예측 모델\", \"Django  백엔드\"],\n",
+    "#     \"tech_section\":{\n",
+    "#         \"AI\": [\"pytorch\", \"huggingface\"],\n",
+    "#         \"Backend\": [\"Django\"]\n",
+    "#     },\n",
+    "#     \"tech\":\"pytorch\"\n",
+    "# }\n",
+    "\n",
     "data_dict = {\n",
     "    \"applicant_name\":\"권기범\",\n",
     "    \"job\":\"AI 개발자\",\n",
     "    \"phone_number\":\"010-2464-5954\",\n",
-    "    \"slogan\":\"AI 개발자 시켜주세요\",\n",
-    "    \"experience\":\"이거 해봄\",\n",
-    "    \"award\":\"상 탔음\",\n",
-    "    \"vision_slogan\":\"돈 많이 벌거임\",\n",
-    "    \"vision_description\":\"돈 많이 주세요\",\n",
-    "    \"project_name\":\"탄소 배출량 관리 시스템\",\n",
-    "    \"outline\":\"개요입니다.\",\n",
-    "    \"detail_content_title\":\"구현한 내용\",\n",
-    "    \"detail_content\":\"탄소 배출량 예측 모델\",\n",
-    "    \"tech_domain\":\"AI\",\n",
-    "    \"tech\":\"pytorch\"\n",
+    "    \"slogan_main\": \"환경을 생각하는 데이터 기반 개발자\",\n",
+    "    \"experience_list\": [\n",
+    "        \"탄소 배출 관리 시스템 개발 경험\",\n",
+    "        \"Django 백엔드 구축 및 운영\",\n",
+    "        \"도커 기반 배포 자동화 경험\",\n",
+    "        \"API 설계 및 문서화\"\n",
+    "    ],\n",
+    "    \"award_list\": [],\n",
+    "    \"vision_slogan\": \"지속가능한 IT 개발로 친환경 세상을 만들다\",\n",
+    "    \"vision_description\": \"탄소 배출 관리 프로젝트를 통해 얻은 데이터 처리 및 자동화 역량을 바탕으로, 환경과 사회에 긍정적인 영향을 미치는 지속가능한 소프트웨어 개발에 기여하고자 합니다.\",\n",
+    "    \"project_name\": \"co2-emission-management\",\n",
+    "    \"outline\": \"탄소 배출량 관리 및 모니터링 시스템\",\n",
+    "    \"detail_content_list\": [\n",
+    "        \"Django 서버 개발 및 유지보수\",\n",
+    "        \"Docker 기반 배포 자동화 구성\",\n",
+    "        \"MySQL 데이터베이스 설계 및 관리\",\n",
+    "        \"API 서버 및 Swagger 문서화 작업\"\n",
+    "    ],\n",
+    "    \"tech_section\": {\n",
+    "        \"Backend\": [\"Django\", \"MySQL\"],\n",
+    "        \"DevOps\": [\"Docker\", \"Swagger\"]\n",
+    "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 220,
    "id": "f4a4c488",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "포트폴리오\n",
-      "\n",
-      "AI 개발자\n",
-      "{job}\n",
-      "AI 개발자\n",
-      "\n",
-      "권기범\n",
-      "{applicant_name}\n",
-      "권기범\n",
-      "\n",
-      "010-2464-5954\n",
-      "{phone_number}\n",
-      "010-2464-5954\n",
-      "\n",
-      "EXPERIENCE\n",
-      "\n",
-      "이거 해봄\n",
-      "{experience}\n",
-      "이거 해봄\n",
-      "\n",
-      "이거 해봄\n",
-      "{experience}\n",
-      "이거 해봄\n",
-      "\n",
-      "이거 해봄\n",
-      "{experience}\n",
-      "이거 해봄\n",
-      "\n",
-      "이거 해봄\n",
-      "{experience}\n",
-      "이거 해봄\n",
-      "\n",
-      "\n",
-      "\n",
-      "“{slogan}”\n",
-      "\n",
-      "지원자 {applicant_name} 입니다.\n",
-      "\n",
-      "\n",
-      "\n",
-      "AWARDS\n",
-      "\n",
-      "상 탔음\n",
-      "{award}\n",
-      "상 탔음\n",
-      "\n",
-      "상 탔음\n",
-      "{award}\n",
-      "상 탔음\n",
-      "\n",
-      "\n",
-      "\n",
-      "photo\n",
-      "\n",
-      "VISION\n",
-      "\n",
-      "앞으로 나아갈 길\n",
-      "\n",
-      "\n",
-      "\n",
-      "“{vision_slogan}”\n",
-      "\n",
-      "돈 많이 주세요\n",
-      "{vision_description}\n",
-      "돈 많이 주세요\n",
-      "\n",
-      "PROJECT\n",
-      "\n",
-      "탄소 배출량 관리 시스템\n",
-      "개요입니다.\n",
-      "구현한 내용\n",
-      "탄소 배출량 예측 모델\n",
-      "{project_name}\n",
-      "개요\n",
-      "{outline}\n",
-      "{detail_content_title}\n",
-      "{detail_content}\n",
-      "탄소 배출량 예측 모델\n",
-      "\n",
-      "\n",
-      "\n",
-      "기술 스택\n",
-      "\n",
-      "AI\n",
-      "pytorch\n",
-      "{tech_domain}\n",
-      "{tech}\n",
-      "pytorch\n",
-      "\n",
-      "감사합니다.\n",
-      "\n",
-      "AI 개발자\n",
-      "권기범\n",
-      "{job}\n",
-      "{applicant_name}\n",
-      "권기범\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text_runs = []\n",
-    "add_ids = []\n",
-    "i = 0\n",
-    "for idx, slide in enumerate(prs.slides):\n",
-    "    \n",
-    "    # 선택된 슬라이드 내 도형 순회\n",
-    "    for j, shape in enumerate(slide.shapes):\n",
-    "        \n",
-    "        # 도형에 텍스트 프레임이 없을 경우\n",
-    "        if not shape.has_text_frame:\n",
-    "            # 다음 도형 선택\n",
-    "            continue\n",
-    "\n",
-    "        content_text_list = shape.text_frame.text.split('\\n')\n",
-    "\n",
-    "        for content_text in content_text_list:\n",
-    "            new_content_text = ''\n",
-    "            if content_text.startswith('{') and content_text.endswith('}'):\n",
-    "                print(data_dict[content_text[1:-1]])\n",
-    "                new_content_text += data_dict[content_text[1:-1]] + '\\n'\n",
-    "        else:\n",
-    "            print(shape.text_frame.text)\n",
-    "            print(new_content_text)\n",
-    "            prs.slides[idx].shapes[j].text_frame.text = new_content_text.strip()"
+    "replace_in_presentation(prs, data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 221,
    "id": "5a45d420",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prs.save('./test.ppt')"
+    "prs.save('./test.pptx')"
    ]
   },
   {
