Feat: 표에 내용을 채울 수 있는 기능 추가가

--- a/ppt/test_py_pptx.ipynb
+++ b/ppt/test_py_pptx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 213,
    "id": "6d22032b",
    "metadata": {},
    "outputs": [],
@@ -13,183 +13,258 @@
     "from pptx import Presentation\n",
     "from pptx.enum.shapes import MSO_SHAPE_TYPE\n",
     "\n",
-    "PPT_PATH = \"sample.pptx\"\n",
+    "PPT_PATH = \"sample_template.pptx\"\n",
     "prs = Presentation(PPT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "id": "87fd74b2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "from copy import deepcopy\n",
+    "from pptx import Presentation\n",
+    "from pptx.enum.shapes import MSO_SHAPE_TYPE\n",
     "\n",
-    "def apply_replacements(shape, replace_dict, letter_spacing=200):\n",
-    "    if not shape.has_text_frame:\n",
-    "        return\n",
-    "    tf = shape.text_frame\n",
-    "    text = tf.text\n",
+    "def extract_subkeys(header: str) -> list[str]:\n",
+    "    \"\"\"\n",
+    "    셀 placeholder 텍스트를 'a-b', 'c(d)', 단일 키 형태로 해석하여\n",
+    "    실제 키 이름 목록을 반환합니다.\n",
+    "    \"\"\"\n",
+    "    header = header.strip()\n",
+    "    if \"-\" in header:\n",
+    "        return [h.strip() for h in header.split(\"-\")]\n",
+    "    if \"(\" in header and header.endswith(\")\"):\n",
+    "        main, rest = header.split(\"(\", 1)\n",
+    "        return [main.strip(), rest[:-1].strip()]\n",
+    "    return [header]\n",
     "\n",
-    "    for key, val in replace_dict.items():\n",
-    "        if not val:\n",
-    "            continue\n",
-    "        if isinstance(val, dict) and key in text:\n",
-    "            tf.clear()\n",
-    "            for domain, items in val.items():\n",
-    "                # 도메인 헤딩\n",
-    "                p_dom = tf.add_paragraph()\n",
-    "                p_dom.text = domain\n",
-    "                for run in p_dom.runs:\n",
-    "                    run.font.bold = True\n",
-    "                    run.font.spacing = letter_spacing\n",
+    "def flatten_replace_dict(d: dict) -> dict:\n",
+    "    \"\"\"\n",
+    "    중첩된 dict / list-of-dict 구조를 순회하며\n",
+    "    최종 scalar 값을 키→값 매핑으로 평탄화합니다.\n",
+    "    (list-of-dict는 첫 요소만 사용)\n",
+    "    \"\"\"\n",
+    "    flat: dict = {}\n",
+    "    def recurse(x):\n",
+    "        if isinstance(x, dict):\n",
+    "            for k, v in x.items():\n",
+    "                if isinstance(v, (str, bool, int, float)):\n",
+    "                    flat[k] = v\n",
+    "                elif isinstance(v, dict):\n",
+    "                    recurse(v)\n",
+    "                elif isinstance(v, list) and v and isinstance(v[0], dict):\n",
+    "                    recurse(v[0])\n",
+    "        elif isinstance(x, list) and x and isinstance(x[0], dict):\n",
+    "            recurse(x[0])\n",
+    "    recurse(d)\n",
+    "    return flat\n",
     "\n",
-    "                # 아이템 불릿\n",
-    "                for item in items:\n",
-    "                    p_item = tf.add_paragraph()\n",
-    "                    p_item.text = item\n",
-    "                    p_item.level = 1\n",
-    "                    p_item.bullet = True\n",
-    "                    for run in p_item.runs:\n",
-    "                        run.font.spacing = letter_spacing\n",
+    "def apply_text_replacements(tf, replace_dict: dict):\n",
+    "    \"\"\"\n",
+    "    텍스트 프레임 내 run 단위로, 키를 길이 내림차순으로\n",
+    "    whole-word lookaround 치환합니다.\n",
+    "    \"\"\"\n",
+    "    flat = flatten_replace_dict(replace_dict)\n",
+    "    # 키를 길이 내림차순 정렬 → 'project_name' 먼저, 'name' 나중\n",
+    "    keys = sorted(flat.keys(), key=len, reverse=True)\n",
+    "    # 각 키마다 단어 경계 lookaround 패턴\n",
+    "    patterns = {\n",
+    "        key: re.compile(rf\"(?<![A-Za-z_]){re.escape(key)}(?![A-Za-z_])\")\n",
+    "        for key in keys\n",
+    "    }\n",
     "\n",
-    "                # 빈 줄\n",
-    "                p_blank = tf.add_paragraph()\n",
-    "                p_blank.text = \" \"\n",
-    "                p_blank.level = 0\n",
-    "                p_blank.bullet = False\n",
+    "    for para in tf.paragraphs:\n",
+    "        for run in para.runs:\n",
+    "            text = run.text\n",
+    "            for key in keys:\n",
+    "                text = patterns[key].sub(str(flat[key]), text)\n",
+    "            run.text = text\n",
     "\n",
+    "def apply_replacements(shape, replace_dict: dict):\n",
+    "    \"\"\"\n",
+    "    하나의 Shape에 대해:\n",
+    "      1) 테이블 처리: placeholder row 복제 → Run.text 교체 (서식 보존)\n",
+    "      2) 텍스트 프레임 처리: apply_text_replacements 호출\n",
+    "    \"\"\"\n",
+    "    # 1) 테이블 처리\n",
+    "    if hasattr(shape, \"has_table\") and shape.has_table:\n",
+    "        table = shape.table\n",
+    "        rows = table.rows\n",
+    "        if not rows:\n",
     "            return\n",
     "\n",
-    "    # --- 2) list 플레이스홀더 처리 ---\n",
-    "    for key, val in replace_dict.items():\n",
-    "        if not val:\n",
-    "            continue\n",
-    "        if isinstance(val, (list, tuple)) and key in text:\n",
-    "            tf.clear()\n",
-    "            # 첫 아이템\n",
-    "            p0 = tf.add_paragraph()\n",
-    "            p0.text = val[0]\n",
-    "            p0.bullet = True\n",
-    "            # 나머지\n",
-    "            for item in val[1:]:\n",
-    "                p = tf.add_paragraph()\n",
-    "                p.text = item\n",
-    "                p.level = p0.level\n",
-    "                p.bullet = True\n",
-    "            return\n",
+    "        # 첫 행을 placeholder row로 간주\n",
+    "        placeholder_row = rows[0]\n",
+    "        placeholder_texts = [cell.text.strip() for cell in placeholder_row.cells]\n",
+    "        placeholder_subkeys = {\n",
+    "            sub for txt in placeholder_texts\n",
+    "                for sub in extract_subkeys(txt)\n",
+    "        }\n",
     "\n",
-    "    # --- 3) 나머지 문자열 플레이스홀더는 run 단위로 replace ---\n",
-    "    for paragraph in tf.paragraphs:\n",
-    "        for run in paragraph.runs:\n",
-    "            for key, val in replace_dict.items():\n",
-    "                if isinstance(val, str) and key in run.text:\n",
-    "                    run.text = run.text.replace(key, val)\n",
+    "        # 후보: top-level list-of-dict + nested list-of-dict\n",
+    "        candidates = []\n",
+    "        for v in replace_dict.values():\n",
+    "            if isinstance(v, list) and v and isinstance(v[0], dict):\n",
+    "                candidates.append(v)\n",
+    "                for item in v:\n",
+    "                    for subv in item.values():\n",
+    "                        if isinstance(subv, list) and subv and isinstance(subv[0], dict):\n",
+    "                            candidates.append(subv)\n",
     "\n",
+    "        # 중복 제거, 순서 보존\n",
+    "        uniq_cands = []\n",
+    "        seen = set()\n",
+    "        for lst in candidates:\n",
+    "            id0 = id(lst)\n",
+    "            if id0 not in seen:\n",
+    "                uniq_cands.append(lst)\n",
+    "                seen.add(id0)\n",
     "\n",
-    "def replace_in_presentation(prs, replace_dict):\n",
+    "        # placeholder_subkeys ⊆ item.keys() 인 리스트 찾기\n",
+    "        for cand_list in uniq_cands:\n",
+    "            item_keys = set(cand_list[0].keys())\n",
+    "            if placeholder_subkeys.issubset(item_keys):\n",
+    "                n = len(cand_list)\n",
+    "                tbl = table._tbl            # xml element\n",
+    "                tr = placeholder_row._tr    # xml row\n",
+    "\n",
+    "                # placeholder row 복제 (n-1)번\n",
+    "                for _ in range(n - 1):\n",
+    "                    tbl.append(deepcopy(tr))\n",
+    "\n",
+    "                # 각 행의 각 셀 Run.text만 교체 (서식 보존)\n",
+    "                for i, item in enumerate(cand_list):\n",
+    "                    row = table.rows[i]\n",
+    "                    for j, cell in enumerate(row.cells):\n",
+    "                        header = placeholder_texts[j]\n",
+    "                        tmpl = re.sub(r\"([A-Za-z_]+)\", r\"{\\1}\", header)\n",
+    "                        try:\n",
+    "                            new_text = tmpl.format_map(item)\n",
+    "                        except KeyError:\n",
+    "                            new_text = \"\"\n",
+    "                        # placeholder_text가 들어있던 첫 번째 Run만 바꿔 줌\n",
+    "                        for para in cell.text_frame.paragraphs:\n",
+    "                            if para.runs:\n",
+    "                                para.runs[0].text = new_text\n",
+    "                            else:\n",
+    "                                run = para.add_run()\n",
+    "                                run.text = new_text\n",
+    "                            break\n",
+    "                return  # 테이블 처리 후 바로 종료\n",
+    "\n",
+    "    # 2) 텍스트 프레임 처리\n",
+    "    if hasattr(shape, \"has_text_frame\") and shape.has_text_frame:\n",
+    "        apply_text_replacements(shape.text_frame, replace_dict)\n",
+    "\n",
+    "def replace_in_presentation(prs: Presentation, replace_dict: dict):\n",
+    "    \"\"\"\n",
+    "    Presentation 전체에 대해 GROUP/일반 Shape 모두 처리\n",
+    "    \"\"\"\n",
     "    for slide in prs.slides:\n",
     "        for shape in slide.shapes:\n",
     "            if shape.shape_type == MSO_SHAPE_TYPE.GROUP:\n",
     "                for sub in shape.shapes:\n",
     "                    apply_replacements(sub, replace_dict)\n",
     "            else:\n",
-    "                apply_replacements(shape, replace_dict)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec010f49",
-   "metadata": {},
-   "source": [
-    "## 들어가는 내용\n",
-    "### 한 번만 들어가는 내용\n",
-    "applicant_name,\n",
-    "job,\n",
-    "phone_number,\n",
-    "slogan,\n",
-    "experience,\n",
-    "award,\n",
-    "vision_slogan,\n",
-    "vision_description,\n",
-    "### 여러 번 들어가는 내용\n",
-    "project_name,\n",
-    "outline,\n",
-    "detail_content_title,\n",
-    "detail_content,\n",
-    "tech_domain,\n",
-    "tech,"
+    "                apply_replacements(shape, replace_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "id": "b37b3710",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_dict = {\n",
-    "#     \"applicant_name\":\"권기범\",\n",
-    "#     \"job\":\"AI 개발자\",\n",
-    "#     \"phone_number\":\"010-2464-5954\",\n",
-    "#     \"slogan_main\":\"AI 개발자 시켜주세요\",\n",
-    "#     \"experience_list\":[\"이거 해봄\", \"이거 해봄2\", \"이거 해봄3\"],\n",
-    "#     \"award\":[\"상 탔음\", \"상 탔음2\"],\n",
-    "#     \"vision_slogan\":\"돈 많이 벌거임\",\n",
-    "#     \"vision_description\":\"돈 많이 주세요\",\n",
-    "#     \"project_name\":\"탄소 배출량 관리 시스템\",\n",
-    "#     \"outline\":\"개요입니다.\",\n",
-    "#     \"detail_content_title\":\"구현한 내용\",\n",
-    "#     \"detail_content_list\":[\"탄소 배출량 예측 모델\", \"Django  백엔드\"],\n",
-    "#     \"tech_section\":{\n",
-    "#         \"AI\": [\"pytorch\", \"huggingface\"],\n",
-    "#         \"Backend\": [\"Django\"]\n",
-    "#     },\n",
-    "#     \"tech\":\"pytorch\"\n",
-    "# }\n",
+    "import ast\n",
     "\n",
-    "data_dict = {\n",
-    "    \"applicant_name\":\"권기범\",\n",
-    "    \"job\":\"AI 개발자\",\n",
-    "    \"phone_number\":\"010-2464-5954\",\n",
-    "    \"slogan_main\": \"환경을 생각하는 데이터 기반 개발자\",\n",
-    "    \"experience_list\": [\n",
-    "        \"탄소 배출 관리 시스템 개발 경험\",\n",
-    "        \"Django 백엔드 구축 및 운영\",\n",
-    "        \"도커 기반 배포 자동화 경험\",\n",
-    "        \"API 설계 및 문서화\"\n",
-    "    ],\n",
-    "    \"award_list\": [],\n",
-    "    \"vision_slogan\": \"지속가능한 IT 개발로 친환경 세상을 만들다\",\n",
-    "    \"vision_description\": \"탄소 배출 관리 프로젝트를 통해 얻은 데이터 처리 및 자동화 역량을 바탕으로, 환경과 사회에 긍정적인 영향을 미치는 지속가능한 소프트웨어 개발에 기여하고자 합니다.\",\n",
-    "    \"project_name\": \"co2-emission-management\",\n",
-    "    \"outline\": \"탄소 배출량 관리 및 모니터링 시스템\",\n",
-    "    \"detail_content_list\": [\n",
-    "        \"Django 서버 개발 및 유지보수\",\n",
-    "        \"Docker 기반 배포 자동화 구성\",\n",
-    "        \"MySQL 데이터베이스 설계 및 관리\",\n",
-    "        \"API 서버 및 Swagger 문서화 작업\"\n",
-    "    ],\n",
-    "    \"tech_section\": {\n",
-    "        \"Backend\": [\"Django\", \"MySQL\"],\n",
-    "        \"DevOps\": [\"Docker\", \"Swagger\"]\n",
-    "    }\n",
-    "}"
+    "ppt_str = \"\"\"\n",
+    "{'name': '권기범', 'email': 'qja1998@naver.com', 'phone_number': '010-0000-0000', 'github_url': 'https://github.com/qja1998', 'blog_url': 'qja1998.github.io', 'enter_slogan': '데이터 기반 문제 해결과 효율적인 AI 시스템 구현에 집중하는 개발자, 권기범입니다.', 'certificate_list': [{'certificate_name': '정보처리기사', 'certificate_authority': '근로진흥원', 'certificate_date': '2023-11-13'}], 'language_list': [{'language_name': '토익스피킹', 'language_authority': 'YBM', 'language_date': '2024-03-13', 'language_grade': 'IM3'}], 'tech_stack_list': [{'stack_name': 'Python', 'stack_level': '상'}, {'stack_name': 'Machine Learning', 'stack_level': '중'}, {'stack_name': 'Git', 'stack_level': '중'}], 'education_list': [{'education_name': '경상대학교', 'major': '항공소프트웨어', 'entrance_date': '2017-03-02', 'graduate_date': '2024-02-16', 'transfered': False, 'type': 3}], 'award_list': [{'award_name': '캡스톤 경진대회', 'award_authority': 'LINC 사업단', 'award_date': '2024-10-13', 'award_details': '금상'}], 'activity_list': [{'activity_name': 'SSAFY', 'activity_authority': '삼성', 'activity_start_date': '2025-03-13', 'activity_end_date': '2025-05-13', 'activity_details': 'Data track'}], 'experience_list': [{'experience_name': 'co2-emission-management', 'experience_start_date': '2023.06', 'experience_end_date': 'Present', 'experience_role': '주요 기능(배출권 값 예측 및 데이터 처리) 개발자 및 프로젝트 문서화 담당'}], 'project_details': [{'project_name': 'CO2 Emission Management', 'project_start_date': '2023.06', 'project_end_date': '2024.06', 'user_roles': ['백엔드 개발', 'AI 모델 구현', '데이터 처리 로직 개발'], 'project_description': 'AI 기반 탄소 배출량 관리 시스템으로, 배출권 값 예측 및 관리 기능을 제공합니다. 주요 기능으로는 배출권 값 예측, 데이터 처리, 불필요한 데이터 정제 등이 포함되어 있습니다.', 'repo_name': 'co2-emission-management', 'troubleshootings': [{'troubleshooting_name': '배출권 값 예측 기능 구현', 'troubleshooting_detail': '탄소 배출권 값을 예측하는 기능이 필요했음.', 'troubleshooting_solve': 'prediction 구현 완료 (커밋 #94fb0d9)로 AI 기반 예측 로직을 개발하여 문제를 해 결함.'}, {'troubleshooting_name': '불필요한 데이터 처리', 'troubleshooting_detail': '탄소 배출권 관련 데이터를 받아오는 과정에서 불필요한 부분이 존재함.', 'troubleshooting_solve': '탄소 배출권 수정 받아오는 파일에서 불필요한 부분 제거 (커밋 #fd7e4c4)로 데이터 정제 수행.'}], 'tech_section': [{'tech_domain': 'Backend', 'tech_name': 'Python (추정)'}, {'tech_domain': 'AI/ML', 'tech_name': 'Prediction Model (커밋 메시지 기반 추론)'}], 'project_contributions': ['prediction 기능 구현 완료 ( 커밋 #94fb0d9)', '배출권 값 가져오는 기능 구현 (커밋 #96b12f3)', '탄소 배출권 데이터 정제 및 불필요한 부분 제거 (커밋 #fd7e4c4)']}], 'final_slogan': '데이터와 AI  기술을 바탕으로 실제 문제를 해결하며, 꾸준한 개선과 성장으로 미래를 만들어가는 개발자 권기범(qja1998)입니다.'}\n",
+    "\"\"\"\n",
+    "ppt_dict = ast.literal_eval(ppt_str)\n",
+    "replace_in_presentation(prs, ppt_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "f4a4c488",
+   "execution_count": 216,
+   "id": "73642439",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '권기범',\n",
+       " 'email': 'qja1998@naver.com',\n",
+       " 'phone_number': '010-0000-0000',\n",
+       " 'github_url': 'https://github.com/qja1998',\n",
+       " 'blog_url': 'qja1998.github.io',\n",
+       " 'enter_slogan': '데이터 기반 문제 해결과 효율적인 AI 시스템 구현에 집중하는 개발자, 권기범입니다.',\n",
+       " 'certificate_list': [{'certificate_name': '정보처리기사',\n",
+       "   'certificate_authority': '근로진흥원',\n",
+       "   'certificate_date': '2023-11-13'}],\n",
+       " 'language_list': [{'language_name': '토익스피킹',\n",
+       "   'language_authority': 'YBM',\n",
+       "   'language_date': '2024-03-13',\n",
+       "   'language_grade': 'IM3'}],\n",
+       " 'tech_stack_list': [{'stack_name': 'Python', 'stack_level': '상'},\n",
+       "  {'stack_name': 'Machine Learning', 'stack_level': '중'},\n",
+       "  {'stack_name': 'Git', 'stack_level': '중'}],\n",
+       " 'education_list': [{'education_name': '경상대학교',\n",
+       "   'major': '항공소프트웨어',\n",
+       "   'entrance_date': '2017-03-02',\n",
+       "   'graduate_date': '2024-02-16',\n",
+       "   'transfered': False,\n",
+       "   'type': 3}],\n",
+       " 'award_list': [{'award_name': '캡스톤 경진대회',\n",
+       "   'award_authority': 'LINC 사업단',\n",
+       "   'award_date': '2024-10-13',\n",
+       "   'award_details': '금상'}],\n",
+       " 'activity_list': [{'activity_name': 'SSAFY',\n",
+       "   'activity_authority': '삼성',\n",
+       "   'activity_start_date': '2025-03-13',\n",
+       "   'activity_end_date': '2025-05-13',\n",
+       "   'activity_details': 'Data track'}],\n",
+       " 'experience_list': [{'experience_name': 'co2-emission-management',\n",
+       "   'experience_start_date': '2023.06',\n",
+       "   'experience_end_date': 'Present',\n",
+       "   'experience_role': '주요 기능(배출권 값 예측 및 데이터 처리) 개발자 및 프로젝트 문서화 담당'}],\n",
+       " 'project_details': [{'project_name': 'CO2 Emission Management',\n",
+       "   'project_start_date': '2023.06',\n",
+       "   'project_end_date': '2024.06',\n",
+       "   'user_roles': ['백엔드 개발', 'AI 모델 구현', '데이터 처리 로직 개발'],\n",
+       "   'project_description': 'AI 기반 탄소 배출량 관리 시스템으로, 배출권 값 예측 및 관리 기능을 제공합니다. 주요 기능으로는 배출권 값 예측, 데이터 처리, 불필요한 데이터 정제 등이 포함되어 있습니다.',\n",
+       "   'repo_name': 'co2-emission-management',\n",
+       "   'troubleshootings': [{'troubleshooting_name': '배출권 값 예측 기능 구현',\n",
+       "     'troubleshooting_detail': '탄소 배출권 값을 예측하는 기능이 필요했음.',\n",
+       "     'troubleshooting_solve': 'prediction 구현 완료 (커밋 #94fb0d9)로 AI 기반 예측 로직을 개발하여 문제를 해 결함.'},\n",
+       "    {'troubleshooting_name': '불필요한 데이터 처리',\n",
+       "     'troubleshooting_detail': '탄소 배출권 관련 데이터를 받아오는 과정에서 불필요한 부분이 존재함.',\n",
+       "     'troubleshooting_solve': '탄소 배출권 수정 받아오는 파일에서 불필요한 부분 제거 (커밋 #fd7e4c4)로 데이터 정제 수행.'}],\n",
+       "   'tech_section': [{'tech_domain': 'Backend', 'tech_name': 'Python (추정)'},\n",
+       "    {'tech_domain': 'AI/ML', 'tech_name': 'Prediction Model (커밋 메시지 기반 추론)'}],\n",
+       "   'project_contributions': ['prediction 기능 구현 완료 ( 커밋 #94fb0d9)',\n",
+       "    '배출권 값 가져오는 기능 구현 (커밋 #96b12f3)',\n",
+       "    '탄소 배출권 데이터 정제 및 불필요한 부분 제거 (커밋 #fd7e4c4)']}],\n",
+       " 'final_slogan': '데이터와 AI  기술을 바탕으로 실제 문제를 해결하며, 꾸준한 개선과 성장으로 미래를 만들어가는 개발자 권기범(qja1998)입니다.'}"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "replace_in_presentation(prs, data_dict)"
+    "ppt_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 217,
    "id": "5a45d420",
    "metadata": {},
    "outputs": [],
@@ -200,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40475d00",
+   "id": "fbff2721",
    "metadata": {},
    "outputs": [],
    "source": []
